--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.1",
-    "nodemon": "^3.0.1",
     "validator": "^13.11.0"
   },
   "scripts": {
@@ -33,6 +32,7 @@
   "devDependencies": {
     "eslint": "^8.54.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.29.0"
+    "eslint-plugin-import": "^2.29.0",
+    "nodemon": "^3.0.1"
   }
 }
