bugfix: исправить ошибки в .eslintrc

--- a/.eslintrc
+++ b/.eslintrc
@@ -19,6 +19,6 @@
             "error",
             "always"
         ],
-        "no-underscore-dangle": 0
+        "no-underscore-dangle":  ["error",{"allow":["_id"]}]
     }
 }
