--- a/.eslintrc
+++ b/.eslintrc
@@ -19,6 +19,6 @@
             "error",
             "always"
         ],
-        "no-underscore-dangle":  ["error",{"allow":["_id"]}]
+        "no-underscore-dangle":  ["error",{"allow":["_id", "_doc"]}]
     }
 }
